# diamond

./: .gitignore  LICENSE  README.md  build.py  default.nix  get_llvm.py  meson.build  recursion4  simple  test.py
.github/workflows/: build-and-test.yaml
samples/: arithmetic_expressions.dm
src/: ast.cpp  ast.hpp  codegen.cpp  codegen.hpp  data_structures.hpp  errors.cpp  errors.hpp  intrinsics.cpp  intrinsics.hpp  lexer.cpp  lexer.hpp  main.cpp  meson.build  parser.cpp  parser.hpp  semantic.cpp  semantic.hpp  shared.hpp  tokens.cpp  tokens.hpp  type_inference.cpp  type_inference.hpp  types.cpp  types.hpp  utilities.cpp  utilities.hpp
src/codegen/: codegen.cpp  codegen.hpp
src/semantic/: analyze.cpp  check_functions_used.cpp  check_functions_used.hpp  context.cpp  context.hpp  intrinsics.cpp  intrinsics.hpp  make_concrete.cpp  make_concrete.hpp  scopes.cpp  scopes.hpp  semantic.cpp  semantic.hpp  type_infer.cpp  type_infer.hpp  type_inference.cpp  type_inference.hpp  unify.cpp  unify.hpp
std/: core.dmd  io.dmd  std.dmd
test/: and_or.dmd  arithmetic_expressions.dm  assignments.dm  assignments3.dmd  blocks.dm  booleans.dm  comparison_expressions.dm  continue.dmd  floats.dm  functions.dm  functions.dmd  functions_with_if_else_statements.dm  if_else_expressions.dm  if_else_expressions2.dmd  if_else_expressions3.dmd  include.dmd  integers.dm  meson.build  modules.dmd  modules2.dmd  modules3.dmd  modulo.dmd  nonlocal.dmd  parser.cpp  recursion.dmd  recursion3.dmd  test.py  test_parser.cpp
test/arrays/: arrays1.dmd  arrays10.dmd  arrays11.dmd  arrays12.dmd  (+9 more)
(+156 files in other folders)
