libdiamond = static_library('diamond',
                      sources : ['parser.cpp', 'types.cpp', 'codegen.cpp'],
                      include_directories : inc,
                      dependencies : [
                          dependency('llvm')
                      ],
                      install : true)
