libdiamond = library('diamond',
                      sources : ['parser.cpp', 'types.cpp', 'codegen.cpp', 'errors.cpp', 'utilities.cpp'],
                      include_directories : inc,
                      dependencies : [
                          dependency('llvm')
                      ],
                      install : true)
